# ur5_narva_ws

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/moveit_commander_cpp/lib/moveit_commander_cpp/: moveit_planning_exe
install/moveit_commander_cpp/share/moveit_commander_cpp/: local_setup.bash  package.bash  (+8 more)
log/: latest_build
src/moveit_commander_cpp/: CMakeLists.txt
src/moveit_commander_cpp/src/: moveit_plan_publisher.cpp
src/ur5_bringup/: CMakeLists.txt
src/ur5_bringup/config/: ros2_controllers.yaml
src/ur5_bringup/launch/: ur5_gazebo.launch.py  ur5_launch.launch.py
src/ur5_bringup/rviz/: rviz_default.rviz
src/ur5_control/: package.xml  setup.py
src/ur5_control/ur5_control/: mpc_constrained_ur5.py  mpc_ur5.py
src/ur5_moveit_config/: .setup_assistant
src/ur5_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  ros2_controllers.yaml  ur.srdf  ur.urdf.xacro
src/ur_custom_sim/: CMakeLists.txt  package.xml
src/ur_custom_sim/config/: initial_positions.yaml  ur5_controllers.yaml  ur5_controllers_gripper.yaml
src/ur_custom_sim/launch/: spawn_ur5_camera.launch.py  spawn_ur5_camera_gripper.launch.py  spawn_ur5_camera_moveit.launch.py  view_ur5_camera.launch.py  view_ur5_camera_gripper.launch.py
src/ur_custom_sim/rviz/: view_rviz.rviz
src/ur_custom_sim/urdf/: 2f_85.ros2_control.xacro  camera.xacro  robotiq_2f_85_macro.xacro  ur5.ros2_control.xacro  ur5_camera.urdf.xacro  ur5_camera_gripper.urdf.xacro  ur5_macro.xacro
src/ur_custom_sim/worlds/: ur5_camera_gripper.sdf
(+331 files in other folders)
